Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100294

RHI Direct3D11 fails to build with MinGW-w64 v8

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.3.0 Beta1, 6.4.0 Beta1
    • 6.3
    • Qt RHI
    • None
    • Windows
    • 2c008d6faf (qt/qtbase/dev) 28a9080e3f (qt/qtbase/6.3) 2c008d6faf (qt/tqtc-qtbase/dev) 28a9080e3f (qt/tqtc-qtbase/6.3)

    Description

      MinGW-w64 releases before v9.0.0 do not have symbol available for IID_IDXGIFactory5 that is used in Direct3D 11 support after fix for QTBUG-99949.

      ld: src/gui/CMakeFiles/Gui.dir/rhi/qrhid3d11.cpp.obj:qrhid3d11.cpp:(.rdata$.refptr.IID_IDXGIFactory5[.refptr.IID_IDXGIFactory5]+0x0): undefined reference to `IID_IDXGIFactory5' 

      Attachments

        For Gerrit Dashboard: QTBUG-100294
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes