rhi: d3d11: Try uuidof instead of IID_* to help old MinGW

Fixes: QTBUG-100294
Change-Id: Iee90355ecd48a753f9a7ec53e7f5758e3d12eddf
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
(cherry picked from commit 2c008d6faf2334beb252cce340ee81b1cea50482)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>